# sakura_gather-project

./: .coveragerc  .gitignore  LICENSE.txt  Makefile  README.rst  chore.txt  poetry-lock-hash.json  pyproject.toml  requirements-automation.txt  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  run.py
.github/workflows/: main.yml
docs/source/: conf.py
docs/source/01-AWS-Setup/: aws_iam_user_setup_library.py  lib.py  settings.py  setup_dev_account.py  setup_devops_account.py  setup_github_secrets.py
genai/: generate_knowledge_base.py  meta.json
sakura_gather/: _version.py
tests/: all.py  test_api.py
